# EAG-V3

AI_Career_Transition_UseCase/: .gitignore  README.md  app.py  main.py  mcp_server.py  prompts.py  pyproject.toml  schemas.py  tools.py
Agenic_Architecture_Basic/: README.md  action.py  agent6.py  artifacts.py  decision.py  gateway.py  mcp_server.py  memory.py  perception.py  pyproject.toml  schemas.py  usage.json  validate_prompts.py
Agenic_Architecture_Basic/llm_gateway/: server.py
MCP_Agent_Prefab_UI/: README.md  agent_log.json  facts.json  mcp_agent.py  mcp_server.py
Memory_Retrieval_fiass/: README.md  action.py  agent6.py  artifacts.py  decision.py  extract_url_texts.py  gateway.py  index_via_fiass.py  mcp_server.py  memory.py  perception.py  schemas.py  ui_app.py  vector_index.py
Memory_Retrieval_fiass /: .env  agent.py  api_server.py  decision.py  extract_papers.py  gateway.py  mcp_server.py  memory.py  perception.py  requirements.txt  schemas.py  vector_index.py
Session10/: .gitignore
agentic_chrome_plugin/: chrome_agent.py  manifest.json  popup.css  popup.html  popup.js  readme.md
article_highlighter_youtube_timetracker_extension/: README.md  content.js  manifest.json  popup.html  popup.js  shorts-content.js
session8/: .env.example  .gitignore  ASSIGNMENT.md  ASSIGNMENT_REQUIREMENTS.md  CONTENTS.md  PREPARED.md  QUICK_REFERENCE.md  README.md  READY_TO_SUBMIT.md  SUBMIT_README.md  TEST_AND_SUBMIT.md  TEST_GUIDE.md  VALIDATION_CHECKLIST.md  test.py
travel_planner_itinary/: .gitignore  README.md  content.js  manifest.json  popup.css  popup.html  (+2 more)
(+124 files in other folders)
